[apiserver, runner] Implement pipeline pause
